--- a/jellyfish.html
+++ b/jellyfish.html
@@ -1,7 +1,7 @@
 
     <html>
     <body>
-    <iframe  id="clickframe" name="clickframe" src="https://accp.assisted-services.ing.intranet/api/mortgage-intermediaries/systeminfo/version
+    <iframe  id="clickframe" name="clickframe" src="https://accp.assisted-services.ing.intranet/gassets/content/assets/web/ng/js/lib/jquery.min.js
 " height='600px' width='800px'></iframe>
     </body>
     </html>
